fix when panel is collapsed/uncollapsed

--- a/htdocs/css/simple-sidebar.css
+++ b/htdocs/css/simple-sidebar.css
@@ -127,7 +127,7 @@
     }
 
     .wrapper.active #sidebar-wrapper {
-        left: 200px;
+        left: -15px;
         width: 200px;
         transition: all 0.4s ease 0s;
     }
